--- a/post-commit.sample
+++ b/post-commit.sample
@@ -39,7 +39,7 @@ LABEL='Code Commit'
 ## To ignore commit messages containing the string '_IGNORE_'
 ## if [[ "$message" != *_IGNORE_* ]]; then
 
-## To ignore both of the above conditions:
+## To ignore both of the above conditions
 ## if [[ ${#MESSAGE} -gt 15 && "$message" != *_IGNORE_* ]]; then
 
 if [[ ${#MESSAGE} -gt 15 && "$message" != *_IGNORE_* ]]; then
