--- a/post-commit.sample
+++ b/post-commit.sample
@@ -37,11 +37,11 @@ LABEL='Code Commit'
 ## if [[ ${#MESSAGE} -gt 15 ]]; then
 
 ## To ignore commit messages containing the string '_IGNORE_':
-## if [[ "$message" != *_IGNORE_* ]]; then
+## if [[ "$MESSAGE" != *_IGNORE_* ]]; then
 
 ## To ignore both of the above conditions:
-## if [[ ${#MESSAGE} -gt 15 && "$message" != *_IGNORE_* ]]; then
+## if [[ ${#MESSAGE} -gt 15 && "$MESSAGE" != *_IGNORE_* ]]; then
 
-if [[ ${#MESSAGE} -gt 15 && "$message" != *_IGNORE_* ]]; then
+if [[ ${#MESSAGE} -gt 15 && "$MESSAGE" != *_IGNORE_* ]]; then
   curl --data "key=$API_KEY&highlight_date=$DATE_TODAY&description=$MESSAGE&source=$LABEL" https://www.rescuetime.com/anapi/highlights_post
 fi
